# nish_android

./: .gitignore  README.md  licence  sdfg.py
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00244fc746c3_fixed_bug.py  18de52d74d24_add_bookmarks_and_previous_fix.py  2797d7a9fb2a_add_feed_events.py  2ed7a43da1d6_add_support_tickets.py  3c3bac90387e_upgrade_user_stack_stats.py  508cfe264abc_add_profile_extra_fields.py  54582825b0fb_asjkhdgflk.py  573aa5005d5c_add_is_draft_to_live_projects.py  62b6090822bc_app_notice.py  665d6a2b3657_added_stackkit.py  7d63714b2ea6_asdkfhjg.py  88ad7f2d9c75_added_follower.py  8d1b81672c3e_add_parent_id_to_project_comments.py  94b45f32816f_add_bookmarks_and_previous_fix.py  a5731d1d0aee_add_feedback.py  aee49d2d69c3_create_users_table.py  af8fded8d660_asjkhdgfajkshdgf.py  bbbbbba67647_add_bookmarks_and_previous_fix.py  bd7a395fd28f_.py  dce47bf7e32a_added_clerk_user_id_to_project_stars.py  eb5b75a57565_changelog.py  ed8a89362b40_changelog.py  eed7a116b954_restore_support_tickets.py  f2a3d048005d_added_stackkit.py  fa2514a1f273_add_bookmarks_and_previous_fix.py
backend/app/: main.py
backend/app/core/: admin.py  auth.py  clerk_jwt.py  config.py  database.py
backend/app/models/: LiveProject.py  __init__.py  app_notice.py  bookmark.py  changelog.py  comment.py  feedback.py  idea.py  notification.py  post.py  project.py  support.py  tag.py  user.py
backend/app/router/: app_notice.py  bookmark.py  changelog.py  dashboard.py  dashboard_layout.py  feed_event.py  follow.py  idea.py  profile.py  (+4 more)
(+267 files in other folders)
